--- a/src/components/locations/Locations.css
+++ b/src/components/locations/Locations.css
@@ -162,11 +162,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 20px;
   width: 100%;
 }
 
-.swiper_container {
+.swiper-container {
   width: 100%;
   padding: 2rem 0;
   position: relative;
@@ -196,7 +196,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 0px;
+  margin-top: 100px;
 }
 
 .slider-controler .swiper-button-next {
