--- a/src/components/reviews/Reviews.css
+++ b/src/components/reviews/Reviews.css
@@ -77,6 +77,7 @@
   border-radius: var(--border-radius);
   padding: 30px;
   width: 100%;
+  margin-top: 30px;
   min-width: 300px;
   max-width: 380px;
   display: flex;
@@ -306,6 +307,7 @@
     padding: 25px;
     min-height: 320px;
     min-width: 270px;
+    margin-top: 30px;
   }
 
   .review-comment {
